# wx-tools

./: .clangd  .gitignore  CMakeLists.txt  README.md  wxTools.icns  wxTools.rc  wxTools.txt
.github/: FUNDING.yml
.github/actions/: wxt-checker-commit.yml
.github/actions/commit-checker/: action.yml
.github/workflows/: build-daily.yml  build-docker.yml  build-macos.yml  build-pages.yml  build-release.yml  build-test.yml  build-ubuntu.yml  build-windows.yml
3rd/: README.md
cmake/: git.cmake  glog.cmake  mongoose.cmake  wxWidgets.cmake  wxt.cmake  wxt_3rd.cmake  wxt_3rd_asio.cmake  wxt_3rd_cserialport.cmake  wxt_3rd_fmt.cmake  wxt_3rd_glog.cmake  wxt_3rd_gtest.cmake  wxt_3rd_json.cmake  wxt_3rd_libiconv.cmake  wxt_3rd_lua.cmake  wxt_3rd_mongoose.cmake  wxt_3rd_simpleble.cmake  wxt_3rd_wxwidgets.cmake  wxt_git.cmake  wxt_tools.cmake  wxt_tools_gettext.cmake  wxt_tools_gettext_mo.cmake  wxt_tools_gettext_po.cmake  wxt_tools_git.cmake
cmake/Linux/: Linux.cmake  LinuxScript.cmake
cmake/Linux/app/DEBIAN/: control
cmake/Linux/app/usr/share/applications/: app.desktop
cmake/MacOS/: MacOS.cmake
cmake/Msix/: Msix.cmake  MsixScript.cmake
docker/20.04/: Dockerfile
docs/: _config.yml  index.md
docs/docs/01.start/: index.md  install-source.md  install-store.md
docs/docs/02.serialport/: index.md
docs/docs/03.udpclient/: index.md
docs/docs/04.udpserver/: index.md
docs/docs/05.tcpclient/: index.md
docs/docs/06.tcpserver/: index.md
docs/docs/07.websocketclient/: index.md
docs/docs/08.websocketserver/: index.md
docs/docs/09.link/: index.md
docs/docs/10.output/: index.md
docs/docs/11.input/: index.md
docs/docs/12.lua/: index.md
docs/docs/12.thirdparty/: index.md
docs/docs/99.thirdparty/: index.md
libs/: README.md
res/apple/macos/: wxTools.plist.in
res/files/: history.txt
res/i18n/: af.po  an.po  ar.po  ca.po  co.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fa_IR.po  fi.po  fr.po  gl_ES.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko_KR.po  lt.po  lv.po  ms.po  nb.po  ne.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  (+5 more)
res/i18n/zh_CN/: wxTools.mo  wxTools.po
res/i18n/zh_TW/: wxTools.mo  wxTools.po
res/scripts/lua/: Echo.lua  Read.lua  Timer.lua  Write.lua
scripts/: ci-build-ubuntu-20.04.sh  install-dependencies.sh
scripts/linux/: make-package.sh
scripts/msix/: make-msix-arm64.bat  make-msix.bat
src/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  main.cpp
src/Common/: wxTools.cpp  wxTools.h
src/Links/: BLECenter.cpp  BLECenter.h  BLECenter_p.h  BLEPeripheral.cpp  BLEPeripheral.h  BLEPeripheral_p.h  Link.cpp  Link.h  Link_p.h  SerialPort.cpp  SerialPort.h  SerialPort_p.h  SocketBase.cpp  SocketBase.h  SocketBase_p.h  SocketClient.cpp  SocketClient.h  SocketClient_p.h  SocketServer.cpp  SocketServer.h  SocketServer_p.h  TCPClient.cpp  TCPClient.h  TCPClient_p.h  TCPServer.cpp  TCPServer.h  TCPServer_p.h  UDPClient.cpp  UDPClient.h  UDPClient_p.h  UDPServer.cpp  UDPServer.h  UDPServer_p.h  WSClient.cpp  WSClient.h  WSClient_p.h  WSServer.cpp  WSServer.h  WSServer_p.h
src/LinksUi/: BLECenterUi.cpp  BLECenterUi.h  BLEPeripheralUi.cpp  BLEPeripheralUi.h  LinkUi.cpp  LinkUi.h  SerialPortUi.cpp  SerialPortUi.h  SocketBaseUi.cpp  SocketBaseUi.h  SocketClientUi.cpp  SocketClientUi.h  SocketServerUi.cpp  SocketServerUi.h  TCPClientUi.cpp  TCPClientUi.h  TCPServerUi.cpp  TCPServerUi.h  UDPClientUi.cpp  UDPClientUi.h  UDPServerUi.cpp  UDPServerUi.h  WSClientUi.cpp  WSClientUi.h  WSServerUi.cpp  WSServerUi.h
src/Page/: Page.cpp  Page.h  PageIO.cpp  PageIO.h  PageIOInput.cpp  PageIOInput.h  PageIOOutput.cpp  PageIOOutput.h  PageSettings.cpp  PageSettings.h  PageSettingsInput.cpp  PageSettingsInput.h  PageSettingsInputPopup.cpp  PageSettingsInputPopup.h  PageSettingsLink.cpp  PageSettingsLink.h  PageSettingsLinkPopup.cpp  PageSettingsLinkPopup.h  PageSettingsOutput.cpp  PageSettingsOutput.h  PageSettingsOutputPopup.cpp  PageSettingsOutputPopup.h
src/Page/Tabs/: PageTabs.cpp  PageTabs.h
src/Page/Tabs/Lua/: LuaRunner.cpp  LuaRunner.h  LuaTab.cpp  LuaTab.h
src/Utilities/: AdditionBoxSizer.cpp  AdditionBoxSizer.h  AdditionComboBox.cpp  AdditionComboBox.h  BLECenterManager.cpp  BLECenterManager.h  BLEScanner.cpp  BLEScanner.h  BaseSettingsPopup.cpp  BaseSettingsPopup.h  BaudRateComboBox.cpp  BaudRateComboBox.h  CRCTypeComboBox.cpp  CRCTypeComboBox.h  DataBitsComboBox.cpp  DataBitsComboBox.h  DataChannelComboBox.cpp  DataChannelComboBox.h  ESCBoxSizer.cpp  ESCBoxSizer.h  ESCComboBox.cpp  ESCComboBox.h  FlowBitsComboBox.cpp  FlowBitsComboBox.h  IpComboBox.cpp  IpComboBox.h  LineEdit.cpp  LineEdit.h  ParityComboBox.cpp  ParityComboBox.h  PortNameComboBox.cpp  PortNameComboBox.h  StopBitsComboBox.cpp  StopBitsComboBox.h  TextFormatComboBox.cpp  TextFormatComboBox.h
test/: test_crc.cpp  test_decode.cpp  test_encode.cpp  test_table.cpp  wxToolsTest.cmake
